--- a/untitled6.ipynb
+++ b/untitled6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1N6SfQn1ugRCKk73Etpsx",
+      "authorship_tag": "ABX9TyNNSeS6QdsIi4fFq5PruCZ4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,39 +27,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "lRa3-1iyanxH"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "텍스트"
-      ],
-      "metadata": {
-        "id": "pt0b38Ciaqp2"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "HxiBUNZpat5v"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#이름은 한지원\n",
-        "## 3D모델러입니다.\n",
-        "## 3D프로그램으로는 Inventor, Blender를 사용하고 있습니다.\n",
-        "![https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.blender.org%2Fabout%2Flogo%2F&psig=AOvVaw2D0Evxl44Sgkm9yGoSVPex&ust=1678856422869000&source=images&cd=vfe&ved=0CBEQjhxqFwoTCLDM6dfR2v0CFQAAAAAdAAAAABAD]"
+        "#3D모델러인  한지원 입니다.\n",
+        "## 3D프로그램으로는 Inventor, Blender를 사용하고 있습니다.\n"
       ],
       "metadata": {
         "id": "ThMhjlrfdW4Y"
