Colaboratory를 통해 생성됨

--- a/untitled6.ipynb
+++ b/untitled6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtk7gyYCrTKeaIWqKSLzhc",
+      "authorship_tag": "ABX9TyOMW7ASiqdH2Z0rGMs3S3dC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,9 @@
       "source": [
         "#대구소프트웨어마이스터고등학교\n",
         "## 3D모델러인  한지원 입니다.\n",
-        "## 3D프로그램으로는 Inventor, Blender를 사용하고 있습니다.\n"
+        "## 3D프린터운용기능사 자격증을 가지고 있습니다.\n",
+        "## 3D프로그램으로는 Inventor, Blender를 사용하고 있습니다.\n",
+        "\n"
       ],
       "metadata": {
         "id": "ThMhjlrfdW4Y"
